log
Thu 14 Sep 2023 05:24:51 PM UTC: 
 tests:  1|8
total_score: 0/70
60e974c
Thu 14 Sep 2023 05:41:45 PM UTC: 
 treemap.c | 57 +++++++++++++++++++++------------------------------------
 1 file changed, 21 insertions(+), 36 deletions(-)
In file included from test.c:4:
treemap.c: In function ‘createTreeMap’:
treemap.c:44:3: error: ‘new’ undeclared (first use in this function)
   44 |   new->lower_than = lower_than;
      |   ^~~
treemap.c:44:3: note: each undeclared identifier is reported only once for each function it appears in
treemap.c:47:1: error: control reaches end of non-void function [-Werror=return-type]
   47 | }
      | ^
cc1: all warnings being treated as errors
Compilation failed
2165d08
Thu 14 Sep 2023 07:37:14 PM UTC: 
 treemap.c | 13 ++++++++++---
 1 file changed, 10 insertions(+), 3 deletions(-)
 tests:  4|7
total_score: 5/70
af6c518
Thu 14 Sep 2023 07:50:01 PM UTC: 
 treemap.c | 19 +++++++++++++++++++
 1 file changed, 19 insertions(+)
In file included from test.c:4:
treemap.c: In function ‘searchTreeMap’:
treemap.c:74:20: error: initialization of ‘int’ from ‘int (*)(void *, void *)’ makes integer from pointer without a cast [-Werror=int-conversion]
   74 |     int comparar = tree -> lower_than;
      |                    ^~~~
cc1: all warnings being treated as errors
Compilation failed
1acdd51
Thu 14 Sep 2023 07:51:07 PM UTC: 
 treemap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  4|7
total_score: 5/70
885844f
Thu 14 Sep 2023 07:56:39 PM UTC: 
 treemap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  6|7
total_score: 5/70
614fe29
Thu 14 Sep 2023 08:32:58 PM UTC: 
 treemap.c | 25 ++++++++++++++++++++++++-
 1 file changed, 24 insertions(+), 1 deletion(-)
In file included from test.c:4:
treemap.c: In function ‘insertTreeMap’:
treemap.c:55:13: error: variable ‘parent’ set but not used [-Werror=unused-but-set-variable]
   55 |   TreeNode *parent = NULL;
      |             ^~~~~~
cc1: all warnings being treated as errors
Compilation failed
adfe245
Thu 14 Sep 2023 08:35:11 PM UTC: 
 treemap.c | 5 +++++
 1 file changed, 5 insertions(+)
 tests:  6|7
total_score: 5/70
e499f25
Thu 14 Sep 2023 08:36:25 PM UTC: 
 treemap.c | 1 +
 1 file changed, 1 insertion(+)
In file included from test.c:4:
treemap.c: In function ‘searchTreeMap’:
treemap.c:112:7: error: this ‘else’ clause does not guard... [-Werror=misleading-indentation]
  112 |       else
      |       ^~~~
treemap.c:114:9: note: ...this statement, but the latter is misleadingly indented as if it were guarded by the ‘else’
  114 |         return NULL;
      |         ^~~~~~
cc1: all warnings being treated as errors
Compilation failed
fa96861
Thu 14 Sep 2023 08:36:45 PM UTC: 
 treemap.c | 3 ++-
 1 file changed, 2 insertions(+), 1 deletion(-)
 tests:  6|7
total_score: 5/70
1fe5f20
Thu 14 Sep 2023 08:40:42 PM UTC: 
 treemap.c | 15 ++++++++++++---
 1 file changed, 12 insertions(+), 3 deletions(-)
In file included from test.c:4:
treemap.c: In function ‘insertTreeMap’:
treemap.c:83:8: error: ‘comparar’ undeclared (first use in this function)
   83 |     if(comparar < 0){
      |        ^~~~~~~~
treemap.c:83:8: note: each undeclared identifier is reported only once for each function it appears in
Compilation failed
beea715
Thu 14 Sep 2023 08:41:16 PM UTC: 
 treemap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  6|7
total_score: 5/70
63c2129
Thu 14 Sep 2023 09:31:36 PM UTC: 
 treemap.c | 10 +++++++++-
 1 file changed, 9 insertions(+), 1 deletion(-)
 tests:  8|6
total_score: 5/70
484b771
Thu 14 Sep 2023 09:39:59 PM UTC: 
 treemap.c | 22 +++++++++++++++++++---
 1 file changed, 19 insertions(+), 3 deletions(-)
 tests:  8|6
total_score: 5/70
49493d9
Fri 15 Sep 2023 03:00:12 AM UTC: 
 treemap.c | 12 ++++++++++++
 1 file changed, 12 insertions(+)
test.c: In function ‘removeNode’:
test.c:503:5: error: ‘main’ is normally a non-static function [-Werror=main]
  503 | int main( int argc, char *argv[] ) {
      |     ^~~~
test.c:606:1: error: expected declaration or statement at end of input
  606 | }
      | ^
At top level:
test.c:503:5: error: ‘main’ defined but not used [-Werror=unused-function]
  503 | int main( int argc, char *argv[] ) {
      |     ^~~~
cc1: all warnings being treated as errors
Compilation failed
cf3306b
Fri 15 Sep 2023 03:30:47 AM UTC: 
 treemap.c | 18 ++++--------------
 1 file changed, 4 insertions(+), 14 deletions(-)
In file included from test.c:4:
treemap.c: In function ‘removeNode’:
treemap.c:106:76: error: comparison between pointer and integer [-Werror]
  106 |   if(tree -> lower_than(node -> parent -> pair -> key, node -> pair -> key)== NULL && node -> right == NULL){
      |                                                                            ^~
treemap.c: In function ‘searchTreeMap’:
treemap.c:138:18: error: comparison between pointer and integer [-Werror]
  138 |   while (current < 1){
      |                  ^
cc1: all warnings being treated as errors
Compilation failed
7fe57ea
